<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    android:orientation="vertical" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10.0dip"
        android:layout_marginTop="10.0dip"
        android:gravity="center_vertical"
        android:paddingLeft="4.0dip"
        android:text="@string/str_inventory"
        android:textColor="#ff222222"
        android:textSize="16.0sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="65dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/session"
            android:textColor="#ff222222" />

        <Spinner
            android:id="@+id/spinner_Session"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/spinnerstyle"
            android:textColor="#ff222222" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:paddingLeft="50dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="65dp"
            android:layout_gravity="center_vertical"
            android:layout_height="wrap_content"
            android:text="@string/inventoryFlag"
            android:textColor="#ff222222" />

        <Spinner
            android:id="@+id/spinner_Flag"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            style="@style/spinnerstyle"
            android:textColor="#ff222222" />
    </LinearLayout>

</LinearLayout>