<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.fn.useries.activity.MainActivity" >

    <LinearLayout
        android:id="@+id/main_linearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#FFFFFF" >

        <TextView
            android:id="@+id/tab_index1"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/textview_selector"
            android:gravity="center"
            android:text="@string/main_inventory"
            android:textColor="@color/button_color"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6sp"
            android:layout_marginTop="6sp"
            android:background="#FFFFFFFF" />

        <TextView
            android:id="@+id/tab_index2"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/textview_selector"
            android:gravity="center"
            android:text="@string/main_readwrite"
            android:textColor="@color/button_color"
            android:textSize="15sp" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="6sp"
            android:layout_marginTop="6sp"
            android:background="#FFFFFFFF" />

        <TextView
            android:id="@+id/tab_index3"
            android:layout_width="fill_parent"
            android:layout_height="40dp"
            android:layout_weight="1.0"
            android:background="@drawable/textview_selector"
            android:gravity="center"
            android:text="@string/main_setting"
            android:textColor="@color/button_color"
            android:textSize="15sp" />
    </LinearLayout>

    <ImageView
        android:id="@+id/cursor"
        android:layout_width="fill_parent"
        android:layout_height="2dp"
        android:layout_below="@id/main_linearLayout"
        android:scaleType="matrix"
        android:src="@drawable/a" />


    <android.support.v4.view.ViewPager
        android:id="@+id/vPager"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/cursor"
        android:layout_gravity="center"
        android:background="#EEEEEE"
        android:flipInterval="30"
        android:persistentDrawingCache="animation" />

</RelativeLayout>