<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/gradient_bg" >

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        android:fadingEdge="vertical"
        android:fillViewport="true"
        android:scrollbars="vertical" >
    </ScrollView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5.0dip"
            android:layout_marginTop="5.0dip"
            android:gravity="center_vertical"
            android:paddingLeft="4.0dip"
            android:text="@string/str_set_out_power"
            android:textColor="#ff222222"
            android:textSize="16.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingBottom="5.0dip"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="5.0dip" >

            <com.fn.useries.TextMoveLayout
                android:id="@+id/out_power_textLayout"
                android:layout_width="fill_parent"
                android:layout_height="40dp" >
            </com.fn.useries.TextMoveLayout>

            <SeekBar
                android:id="@+id/out_power_seekBar"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/srart_text_dbm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10sp"
                android:text="@string/str_srart_power" />

            <TextView
                android:id="@+id/end_text_dbm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10sp"
                android:text="@string/str_end_power" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>